--- a/src/state-machines/import-invoices-sm.yaml
+++ b/src/state-machines/import-invoices-sm.yaml
@@ -82,9 +82,9 @@ States:
               invoiceId.$: $.generate.invoiceId
               fileName.$: $.fileName
               invoiceData.$: $.data
-            DetailType: ImportInvoices
+            DetailType: NewInvoiceImported
             EventBusName: Invoices
-            Source: NewInvoiceImported
+            Source: ImportInvoices
           Comment: Create formatted event with invoice data
         Failed:
           Type: Fail
